<resources>
    <string name="app_name">Calculator</string>
    <string name="btn7"><font size="30">7</font></string>
    <string name="btn8"><font size="30">8</font></string>
    <string name="btn9"><font size="30">9</font></string>
    <string name="btn4"><font size="30">4</font></string>
    <string name="btn5"><font size="30">5</font></string>
    <string name="btn6"><font size="30">6</font></string>
    <string name="btn1"><font size="30">1</font></string>
    <string name="btn2"><font size="30">2</font></string>
    <string name="btn3"><font size="30">3</font></string>
    <string name="btn0"><font size="30">0</font></string>
    <string name="btnpoint"><font size="30">.</font></string>
    <string name="btnequal"><font size="30">=</font></string>
    <string name="btnBackspace"><font size="30">⌫</font></string>
    <string name="btnDivision"><font size="30">÷</font></string>
    <string name="btnMultiply"><font size="30">×</font></string>
    <string name="btnSubtract"><font size="30">－</font></string>
    <string name="btnPlus"><font size="30">＋</font></string>
    <string name="CalHint"><font size="25">Input Expression to Calculate...</font></string>

</resources>
